fixed spacing on list items

--- a/front-end-dev/take-home-project-2/style.css
+++ b/front-end-dev/take-home-project-2/style.css
@@ -8,8 +8,8 @@ html, body {
   font: normal 16px Helvetica, Arial, sans-serif;
   font-weight: 300;
   letter-spacing: 1px;
-  width: 1200px;
-  min-width: 768px;
+  max-width: 1200px;
+  min-width: 480px;
   height: 818px;
   color: #b2b5c3;
 }
@@ -91,6 +91,7 @@ ul#completed li + li {
 
 main {
   width: auto;
+  height: 100%;
   overflow: hidden;
   color: #050505;
   padding: 60px 100px 0 20px;
@@ -99,7 +100,7 @@ main {
 main h1 span {
   position: relative;
   display: inline-block;
-  left: 19px;
+  left: 18px;
   bottom: 2px;
   height: 18px;
   width: 18px;
@@ -114,9 +115,7 @@ main h1 span {
 
 main li {
   width: 100%;
-  padding-left: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 16px 0 16px 10px;
   border-top: 1px solid #e7e7e7;
 }
 
@@ -126,8 +125,8 @@ main li:nth-of-type(2) {
 }
 
 main li:first-of-type {
-  padding-top: 0;
-  padding-bottom: 20px;
+  padding-top: 8px;
+  padding-bottom: 17px;
 }
 
 main li label {
@@ -148,7 +147,7 @@ main li form:last-of-type {
   float: right;
 }
 
-input[type="checkbox"] {
+main input[type="checkbox"] {
   display: none;
 }
 
@@ -158,11 +157,11 @@ span.mycheckbox {
   height: 15px;
   display: inline-block;
   vertical-align: middle;
-  background: url("images/unchecked-box.png") no-repeat;
+  background: transparent url("images/unchecked-box.png") no-repeat;
 }
 
 input[type="checkbox"]:checked + span.mycheckbox {
-  background: url("images/checked-box.png") no-repeat;
+  background: transparent url("images/checked-box.png") no-repeat;
 }
 
 input[type="checkbox"]:checked ~ label {
